dart/vendor/sweph/native/sweph/src/swephexp.h



/* planetary phenomena */
ext_def (int32) swe_pheno(double tjd, int32 ipl, int32 iflag, double *attr, char *serr);


ext_def(int32) swe_pheno_ut(double tjd_ut, int32 ipl, int32 iflag, double *attr, char *serr);


ext_def (double) swe_refrac(double inalt, double atpress, double attemp, int32 calc_flag);


ext_def (double) swe_refrac_extended(double inalt, double geoalt, double atpress, double attemp, double lapse_rate, int32 calc_flag, double *dret);


ext_def (void) swe_set_lapse_rate(double lapse_rate);


ext_def (void) swe_azalt(
      double tjd_ut,
      int32 calc_flag,
      double *geopos,
      double atpress,
      double attemp,
      double *xin,
      double *xaz);


ext_def (void) swe_azalt_rev(
      double tjd_ut,
      int32 calc_flag,
      double *geopos,
      double *xin,
      double *xout);


ext_def (int32) swe_rise_trans_true_hor(
               double tjd_ut, int32 ipl, char *starname,
	       int32 epheflag, int32 rsmi,
               double *geopos,
	       double atpress, double attemp,
	       double horhgt,
               double *tret,
               char *serr);


ext_def (int32) swe_rise_trans(
               double tjd_ut, int32 ipl, char *starname,
	       int32 epheflag, int32 rsmi,
               double *geopos,
	       double atpress, double attemp,
               double *tret,
               char *serr);


ext_def (int32) swe_nod_aps(double tjd_et, int32 ipl, int32 iflag,
                      int32  method,
                      double *xnasc, double *xndsc,
                      double *xperi, double *xaphe,
                      char *serr);


ext_def (int32) swe_nod_aps_ut(double tjd_ut, int32 ipl, int32 iflag,
                      int32  method,
                      double *xnasc, double *xndsc,
                      double *xperi, double *xaphe,
                      char *serr);

ext_def (int32) swe_get_orbital_elements(
  double tjd_et, int32 ipl, int32 iflag, double *dret, char *serr);


ext_def (int32) swe_orbit_max_min_true_distance(double tjd_et, int32 ipl, int32 iflag, double *dmax, double *dmin, double *dtrue, char *serr);


/****************************
 * exports from swephlib.c
 ****************************/

/* delta t */
ext_def( double ) swe_deltat(double tjd);

ext_def(double) swe_deltat_ex(double tjd, int32 iflag, char *serr);