dart/vendor/sweph/lib/src/bindings.dart


  /// planetary phenomena
  int swe_pheno(
    double tjd,
    int ipl,
    int iflag,
    ffi.Pointer<ffi.Double> attr,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_pheno(
      tjd,
      ipl,
      iflag,
      attr,
      serr,
    );
  }

  late final _swe_phenoPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, int32, int32, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_pheno');
  late final _swe_pheno = _swe_phenoPtr.asFunction<
      int Function(
          double, int, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  int swe_pheno_ut(
    double tjd_ut,
    int ipl,
    int iflag,
    ffi.Pointer<ffi.Double> attr,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_pheno_ut(
      tjd_ut,
      ipl,
      iflag,
      attr,
      serr,
    );
  }

  late final _swe_pheno_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, int32, int32, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_pheno_ut');
  late final _swe_pheno_ut = _swe_pheno_utPtr.asFunction<
      int Function(
          double, int, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  double swe_refrac(
    double inalt,
    double atpress,
    double attemp,
    int calc_flag,
  ) {
    return _swe_refrac(
      inalt,
      atpress,
      attemp,
      calc_flag,
    );
  }

  late final _swe_refracPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double, ffi.Double, ffi.Double, int32)>>('swe_refrac');
  late final _swe_refrac =
      _swe_refracPtr.asFunction<double Function(double, double, double, int)>();

  double swe_refrac_extended(
    double inalt,
    double geoalt,
    double atpress,
    double attemp,
    double lapse_rate,
    int calc_flag,
    ffi.Pointer<ffi.Double> dret,
  ) {
    return _swe_refrac_extended(
      inalt,
      geoalt,
      atpress,
      attemp,
      lapse_rate,
      calc_flag,
      dret,
    );
  }

  late final _swe_refrac_extendedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>)>>('swe_refrac_extended');
  late final _swe_refrac_extended = _swe_refrac_extendedPtr.asFunction<
      double Function(double, double, double, double, double, int,
          ffi.Pointer<ffi.Double>)>();

  void swe_set_lapse_rate(
    double lapse_rate,
  ) {
    return _swe_set_lapse_rate(
      lapse_rate,
    );
  }

  late final _swe_set_lapse_ratePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Double)>>(
          'swe_set_lapse_rate');
  late final _swe_set_lapse_rate =
      _swe_set_lapse_ratePtr.asFunction<void Function(double)>();

  void swe_azalt(
    double tjd_ut,
    int calc_flag,
    ffi.Pointer<ffi.Double> geopos,
    double atpress,
    double attemp,
    ffi.Pointer<ffi.Double> xin,
    ffi.Pointer<ffi.Double> xaz,
  ) {
    return _swe_azalt(
      tjd_ut,
      calc_flag,
      geopos,
      atpress,
      attemp,
      xin,
      xaz,
    );
  }

  late final _swe_azaltPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('swe_azalt');
  late final _swe_azalt = _swe_azaltPtr.asFunction<
      void Function(double, int, ffi.Pointer<ffi.Double>, double, double,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)>();

  void swe_azalt_rev(
    double tjd_ut,
    int calc_flag,
    ffi.Pointer<ffi.Double> geopos,
    ffi.Pointer<ffi.Double> xin,
    ffi.Pointer<ffi.Double> xout,
  ) {
    return _swe_azalt_rev(
      tjd_ut,
      calc_flag,
      geopos,
      xin,
      xout,
    );
  }

  late final _swe_azalt_revPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('swe_azalt_rev');
  late final _swe_azalt_rev = _swe_azalt_revPtr.asFunction<
      void Function(double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)>();

  int swe_rise_trans_true_hor(
    double tjd_ut,
    int ipl,
    ffi.Pointer<ffi.Uint8> starname,
    int epheflag,
    int rsmi,
    ffi.Pointer<ffi.Double> geopos,
    double atpress,
    double attemp,
    double horhgt,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_rise_trans_true_hor(
      tjd_ut,
      ipl,
      starname,
      epheflag,
      rsmi,
      geopos,
      atpress,
      attemp,
      horhgt,
      tret,
      serr,
    );
  }

  late final _swe_rise_trans_true_horPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Uint8>,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_rise_trans_true_hor');
  late final _swe_rise_trans_true_hor = _swe_rise_trans_true_horPtr.asFunction<
      int Function(
          double,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Double>,
          double,
          double,
          double,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_rise_trans(
    double tjd_ut,
    int ipl,
    ffi.Pointer<ffi.Uint8> starname,
    int epheflag,
    int rsmi,
    ffi.Pointer<ffi.Double> geopos,
    double atpress,
    double attemp,
    ffi.Pointer<ffi.Double> tret,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_rise_trans(
      tjd_ut,
      ipl,
      starname,
      epheflag,
      rsmi,
      geopos,
      atpress,
      attemp,
      tret,
      serr,
    );
  }

  late final _swe_rise_transPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Uint8>,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_rise_trans');
  late final _swe_rise_trans = _swe_rise_transPtr.asFunction<
      int Function(
          double,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Double>,
          double,
          double,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_nod_aps(
    double tjd_et,
    int ipl,
    int iflag,
    int method,
    ffi.Pointer<ffi.Double> xnasc,
    ffi.Pointer<ffi.Double> xndsc,
    ffi.Pointer<ffi.Double> xperi,
    ffi.Pointer<ffi.Double> xaphe,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_nod_aps(
      tjd_et,
      ipl,
      iflag,
      method,
      xnasc,
      xndsc,
      xperi,
      xaphe,
      serr,
    );
  }

  late final _swe_nod_apsPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_nod_aps');
  late final _swe_nod_aps = _swe_nod_apsPtr.asFunction<
      int Function(
          double,
          int,
          int,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_nod_aps_ut(
    double tjd_ut,
    int ipl,
    int iflag,
    int method,
    ffi.Pointer<ffi.Double> xnasc,
    ffi.Pointer<ffi.Double> xndsc,
    ffi.Pointer<ffi.Double> xperi,
    ffi.Pointer<ffi.Double> xaphe,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_nod_aps_ut(
      tjd_ut,
      ipl,
      iflag,
      method,
      xnasc,
      xndsc,
      xperi,
      xaphe,
      serr,
    );
  }

  late final _swe_nod_aps_utPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_nod_aps_ut');
  late final _swe_nod_aps_ut = _swe_nod_aps_utPtr.asFunction<
      int Function(
          double,
          int,
          int,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_get_orbital_elements(
    double tjd_et,
    int ipl,
    int iflag,
    ffi.Pointer<ffi.Double> dret,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_get_orbital_elements(
      tjd_et,
      ipl,
      iflag,
      dret,
      serr,
    );
  }

  late final _swe_get_orbital_elementsPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(ffi.Double, int32, int32, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_get_orbital_elements');
  late final _swe_get_orbital_elements =
      _swe_get_orbital_elementsPtr.asFunction<
          int Function(double, int, int, ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>();

  int swe_orbit_max_min_true_distance(
    double tjd_et,
    int ipl,
    int iflag,
    ffi.Pointer<ffi.Double> dmax,
    ffi.Pointer<ffi.Double> dmin,
    ffi.Pointer<ffi.Double> dtrue,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_orbit_max_min_true_distance(
      tjd_et,
      ipl,
      iflag,
      dmax,
      dmin,
      dtrue,
      serr,
    );
  }

  late final _swe_orbit_max_min_true_distancePtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              ffi.Double,
              int32,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_orbit_max_min_true_distance');
  late final _swe_orbit_max_min_true_distance =
      _swe_orbit_max_min_true_distancePtr.asFunction<
          int Function(
              double,
              int,
              int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>();

  /// delta t
  double swe_deltat(
    double tjd,
  ) {
    return _swe_deltat(
      tjd,
    );
  }

  late final _swe_deltatPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'swe_deltat');
  late final _swe_deltat = _swe_deltatPtr.asFunction<double Function(double)>();

  double swe_deltat_ex(
    double tjd,
    int iflag,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_deltat_ex(
      tjd,
      iflag,
      serr,
    );
  }
